--- a/students_submissions/8900446/lab3.ipynb
+++ b/students_submissions/8900446/lab3.ipynb
@@ -875,7 +875,9 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The model does not fit the data sets because the MSE is high."
+   ]
   }
  ],
  "metadata": {
