--- a/students_submissions/8894805/lab4.ipynb
+++ b/students_submissions/8894805/lab4.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +91,11 @@
     "    ax3.set_title('Histogram of percentage error (%)')\n",
     "\n",
     "    # Added to get coefficient values and Intercept value.\n",
-    "    print(f'The coefficient values are: {model.coef_}')\n",
-    "    print(f'The Intercept values are: {model.intercept_}')\n",
+    "    if(hasattr(model,'coef_')):\n",
+    "        print(f'The coefficient values are: {model.coef_}')\n",
+    "\n",
+    "    if(hasattr(model,'intercept_')):\n",
+    "        print(f'The Intercept values are: {model.intercept_}')\n",
     "    \n",
     "    print(f'Test Dataset: Mean Absolute Error: {mean_absolute_error(y_test, y_pred_test):.2f}')\n",
     "    print(f'Train Dataset: Mean Absolute Error: {mean_absolute_error(y_train, y_pred_train):.2f}')\n",
@@ -107,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -494,17 +497,10 @@
     "\n",
     "- Residual graph: The graph displays the difference between actual and predicted values. \n",
     "    - Random scattering around zero for linear regression indicates a good fit, while noticeable patterns suggest that polynomial regression may capture non-linear relationships more effectively.\n",
-    "<br/>\n",
-    "<br/>\n",
-    "\n",
     "- Percentage Error Scatter Plot: This plot shows the relationship between actual values and percentage errors.\n",
     "    - Random scatter around zero in linear regression implies accurate predictions, while distinct patterns indicate potential improvement with polynomial regression.\n",
-    "<br/>\n",
-    "<br/>\n",
     "- Percentage Error Histogram: The histogram presents the distribution of percentage errors. \n",
     "    - A symmetric and normally distributed histogram centered around zero indicates a good fit for linear regression, whereas deviations or skewed distributions suggest potential bias when using polynomial regression.\n",
-    "<br/>\n",
-    "<br/>\n",
     "\n",
     "The graphs help assess goodness-of-fit, with linear regression suitable for random patterns and well-behaved errors, while caution is needed with polynomial regression for avoiding overfitting, and evaluation metrics provide a quantitative comparison as complexity increases."
    ]
