--- a/students_submissions/8896658/lab_4.ipynb
+++ b/students_submissions/8896658/lab_4.ipynb
@@ -5,6 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**LAB 4 - Multivariate Linear and Polynomial Regression, and Evaluation using MAE and MAPE.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1.Use the code provided below to get the data, and run the train-test split. Description of each column can be found in sklearn documentation. Look at the documentation for the load_diabetes method to know what are as_frame and scaled for."
    ]
   },
@@ -336,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#predict the x train and y train\n",
+    "#predict the LINEAR MODEL(x train and y train)\n",
     "y_pred_x_train=linear_model.predict(X_train)\n",
     "y_pred_x_test=linear_model.predict(X_test)"
    ]
@@ -365,7 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train and test the polynomial feature\n",
+    "#transform the polynomial feature\n",
     "X_poly_train= poly_features.fit_transform(X_train)\n",
     "X_poly_test= poly_features.fit_transform(X_test)\n"
    ]
@@ -889,13 +897,6 @@
     "\n",
     "However, it is important to note that the difference in performance between the two models is relatively small."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
