Converted Practical Lab-4 jupyter file to HTML

--- a/students_submissions/8856840/Practical_Lab-4.ipynb
+++ b/students_submissions/8856840/Practical_Lab-4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "(353, 65)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "       's5^2', 's5 s6', 's6^2'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,8 @@
       "The mean absolute error for lin_model is:  42.79409467959993\n",
       "The mean square error for lin_model is:  2900.1936284934795\n",
       "The RMSE for lin_model is:  53.85344583676591\n",
-      "The mean absolue percentage error MAPE of lin_model is:  0.3749982636756112\n"
+      "The mean absolue percentage error MAPE of lin_model is:  0.3749982636756112\n",
+      "The R^2 value for lin_model is:  0.4526027629719198\n"
      ]
     }
    ],
@@ -497,12 +498,13 @@
     "print(\"The mean absolute error for lin_model is: \", metrics.mean_absolute_error(y_test, y_pred_lin_test))\n",
     "print(\"The mean square error for lin_model is: \", metrics.mean_squared_error(y_test, y_pred_lin_test))\n",
     "print(\"The RMSE for lin_model is: \", math.sqrt(metrics.mean_squared_error(y_test, y_pred_lin_test)))\n",
-    "print(\"The mean absolue percentage error MAPE of lin_model is: \", metrics.mean_absolute_percentage_error(y_test, y_pred_lin_test))"
+    "print(\"The mean absolue percentage error MAPE of lin_model is: \", metrics.mean_absolute_percentage_error(y_test, y_pred_lin_test))\n",
+    "print(\"The R^2 value for lin_model is: \", metrics.r2_score(y_test, y_pred_lin_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +514,8 @@
       "The mean absolute error for poly_model is:  43.5816932545363\n",
       "The mean square error for poly_model is:  3096.028307327964\n",
       "The RMSE for poly_model is:  55.64196534386581\n",
-      "The mean absolue percentage error MAPE of poly_model is:  0.3828567851386741\n"
+      "The mean absolue percentage error MAPE of poly_model is:  0.3828567851386741\n",
+      "The R^2 value for poly_model is:  0.4156399336438782\n"
      ]
     }
    ],
@@ -522,7 +525,8 @@
     "print(\"The mean absolute error for poly_model is: \", metrics.mean_absolute_error(y_test, y_pred_poly_test))\n",
     "print(\"The mean square error for poly_model is: \", metrics.mean_squared_error(y_test, y_pred_poly_test))\n",
     "print(\"The RMSE for poly_model is: \", math.sqrt(metrics.mean_squared_error(y_test, y_pred_poly_test)))\n",
-    "print(\"The mean absolue percentage error MAPE of poly_model is: \", metrics.mean_absolute_percentage_error(y_test, y_pred_poly_test))"
+    "print(\"The mean absolue percentage error MAPE of poly_model is: \", metrics.mean_absolute_percentage_error(y_test, y_pred_poly_test))\n",
+    "print(\"The R^2 value for poly_model is: \", metrics.r2_score(y_test, y_pred_poly_test))"
    ]
   },
   {
@@ -551,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +564,7 @@
        "(353, 10)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +584,7 @@
        "(353, 65)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +640,7 @@
        "       's5^2', 's5 s6', 's6^2'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,13 +660,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean absolute error for lin_model is:  42.79409467959993\n",
+      "The mean square error for lin_model is:  2900.1936284934795\n",
+      "The RMSE for lin_model is:  53.85344583676591\n",
+      "The mean absolue percentage error MAPE of lin_model is:  0.3749982636756112\n",
+      "The R^2 value for lin_model is:  0.4526027629719198\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Performance metrics of lin_model for evaluation\n",
+    "\n",
+    "print(\"The mean absolute error for lin_model is: \", metrics.mean_absolute_error(y_test, y_pred_lin_test))\n",
+    "print(\"The mean square error for lin_model is: \", metrics.mean_squared_error(y_test, y_pred_lin_test))\n",
+    "print(\"The RMSE for lin_model is: \", math.sqrt(metrics.mean_squared_error(y_test, y_pred_lin_test)))\n",
+    "print(\"The mean absolue percentage error MAPE of lin_model is: \", metrics.mean_absolute_percentage_error(y_test, y_pred_lin_test))\n",
+    "print(\"The R^2 value for lin_model is: \", metrics.r2_score(y_test, y_pred_lin_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean absolute error for poly_model is:  43.5816932545363\n",
+      "The mean square error for poly_model is:  3096.028307327964\n",
+      "The RMSE for poly_model is:  55.64196534386581\n",
+      "The mean absolue percentage error MAPE of poly_model is:  0.3828567851386741\n",
+      "The R^2 value for poly_model is:  0.4156399336438782\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Performance metrics of poly_model for evaluation\n",
+    "\n",
+    "print(\"The mean absolute error for poly_model is: \", metrics.mean_absolute_error(y_test, y_pred_poly_test))\n",
+    "print(\"The mean square error for poly_model is: \", metrics.mean_squared_error(y_test, y_pred_poly_test))\n",
+    "print(\"The RMSE for poly_model is: \", math.sqrt(metrics.mean_squared_error(y_test, y_pred_poly_test)))\n",
+    "print(\"The mean absolue percentage error MAPE of poly_model is: \", metrics.mean_absolute_percentage_error(y_test, y_pred_poly_test))\n",
+    "print(\"The R^2 value for poly_model is: \", metrics.r2_score(y_test, y_pred_poly_test))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "By comparing the lin_model and poly_model performance evaluation metrics, I would choose the linear regression model (lin_model) for deployment.\n",
     "\n",
-    "Explanation: Though there is only slight difference in performance metrics values, relatively, lin_model exhibits lower values for mean absolute error (MAE), Mean Square error (MSE), Root Mean Square Error (RMSE), and Mean Absolute Percentage Error (MAPE) than the polynomial model (poly_model) of degree = 2. \n",
+    "Explanation: Though there is only slight difference in performance metrics values, relatively, lin_model exhibits lower values for mean absolute error (MAE), Mean Square error (MSE), Root Mean Square Error (RMSE), and Mean Absolute Percentage Error (MAPE) and higher value of R^2 score than the polynomial model (poly_model) of degree = 2. \n",
     "\n",
     "The reason for performance drop in poly_model is due to the rise in number of features because of interaction terms. When there are lot of features fitted into the model, most of the features will not have the statistical significance to contribute towards prediction. This introduces noise into the model, which leads to the lower accuracy and weak prediction performance."
    ]
@@ -680,11 +738,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: Random scatter of residuals around zero indicates a good fit, suggesting that the model captures the underlying relationships. However, if there is a clear pattern in the residuals, such as a curve, an increasing or decreasing trend, or any other systematic deviation from zero, it suggests that the model is not capturing all the information and may have room for improvement. \n",
+    "Answer: \n",
+    "\n",
+    "##### **lin_model Graph Analysis**\n",
+    "\n",
+    "From the graphs of muliple linear regression model (lin_model), we have the following insights regarding the goodness of fit.\n",
+    "\n",
+    "In the residual plot, the residuals of lin_model for lower value y_test points are below the regression line. Whereas, the residuals with high value y_test points lies above the regression line. The residuals are concentrated more below the regression line. This makes the regression line tilted downwards slightly due to difference in residual volume.\n",
+    "\n",
+    "From the percentage error plot, we can see that majority of the residual points have negative percentage error outweighing the few residuals with positive percentage error, which leads to negative percentage error. Most of the residual points swarming around the zero percentage error is an indication of some what good performance of the lin_model. Additionally, as the y_test value is increasing, the more residuals are approaching the zero residual error.\n",
+    "\n",
+    "From the frequency distribution histogram of residuals for lin_model, it is evident that the residuals are normally distributed around zero. However, some of the residuals are skewed toward left side causing a negative percentage error.\n",
+    "\n",
+    "##### **poly_model Graph Analysis**\n",
+    "\n",
+    "From the graphs of the polynomial regression model (poly_model) of degree = 2, we have the following insights about goodness-of-fit.\n",
+    "\n",
+    "The residual plot illustrates that the residuals are more spreadout around zero. However, just like linear model, low value y_test points have more residuals below zero and in a positive linear trend, the residuals shifted above zero value for high value y_test data. The greater residual concentration below zero results a downward tilt in the prediction line.\n",
+    "\n",
+    "In the percentage error plot, the number of residuals towards the negative percentage error axis are more, leading to a negative percentage error to become more. As the y_test value is increasing, the residuals are swarming around the zero percentage error.\n",
+    "\n",
+    "From the frequency distribution of residuals, we can see that, the residuals are symmetrically distributed around zero with some skewed residual distribution towards the left hand side (-ve side).\n",
+    "\n",
+    "##### **Comparison between lin_model and poly_model graphs**\n",
+    "\n",
+    "Random scatter of residuals around zero indicates a good fit, suggesting that the model captures the underlying relationships. However, if there is a clear pattern in the residuals, such as a curve, an increasing or decreasing trend, or any other systematic deviation from zero, it suggests that the model is not capturing all the information and may have room for improvement. \n",
     "\n",
     "From our residual vs y_test graphs, we can see that, the residuals were not randomly scattered around zero rather following an increasing pattern. But lin_model has slightly better distribution compared to poly model. \n",
     "\n",
-    "However, The percentage error graph is not showing significant difference between lin_model and poly_model.\n",
+    "Moreover, The percentage error graphs illustrate the dominance of negative percenatge error in both models. But, unlike poly_model, lin_model have more points swarmed around zero percentage error. Related to residual trend, both model following the same increasing trend.\n",
     "\n",
     "Finally, after examining the distribution of the residuals, we can see that the residuals of both poly_model and lin_model follow a normal distribution around zero. A normal distribution of residuals represents that the model's errors are unbiased and have constant variance. However, more lin_model residuals are distributed around zero than poly_model residuals.\n",
     "\n",
