--- a/students_submissions/8900446/lab4.ipynb
+++ b/students_submissions/8900446/lab4.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Henry Ezeanowi - 8900446"
+    "# Henry Ezeanowi - 8900446 Lab4"
    ]
   },
   {
