Added HTML file

--- a/students_submissions/8894408/lab4.ipynb
+++ b/students_submissions/8894408/lab4.ipynb
@@ -189,7 +189,7 @@
    "metadata": {},
    "source": [
     "1. How many parameters are we fitting for in linear regression and in the polynomial regression?\n",
-    "- Linear Regression: In linear regression, the number of parameters are directly equal to number of features or columns we are feeding in. The parameters are:  `['age', 'sex', 'bmi', 'bp', 's1', 's2', 's3', 's4', 's5', 's6'`\n",
+    "- Linear Regression: In linear regression, the number of parameters are directly equal to number of features or columns we are feeding in. The parameters are:  `['age', 'sex', 'bmi', 'bp', 's1', 's2', 's3', 's4', 's5', 's6']`\n",
     "- Polynomial Regression: In polynomial regression, the number of parameter depends upon the degree of polynomial we have configured. In our case, with a polynomial of degree 2, the parameters are: `['age', 'sex', 'bmi', 'bp', 's1', 's2', 's3', 's4', 's5', 's6',\n",
     "       'age^2', 'age sex', 'age bmi', 'age bp', 'age s1', 'age s2',\n",
     "       'age s3', 'age s4', 'age s5', 'age s6', 'sex^2', 'sex bmi',\n",
