--- a/students_submissions/8897082/lab5.ipynb
+++ b/students_submissions/8897082/lab5.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -104,17 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Model with highest performance, based on R-Squared:\n",
+      "The Model exhibiting highest performance, based on R-Squared:\n",
       "Degree: 1.0, R-Squared: 0.4823, SD R-Squared: 0.0493\n",
       "----------------------------------------------\n",
-      "The Model with highest performance, based on MAE:\n",
+      "The Model exhibiting highest performance, based on MAE:\n",
       "Degree: 1, MAE: 44.2765, SD MAE: 2.1001\n"
      ]
     }
@@ -134,13 +134,6 @@
     "print(\"The Model exhibiting highest performance, based on MAE:\")\n",
     "print(f\"Degree: {mae_degree}, MAE: {mae:.4f}, SD MAE: {mae_sd:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
