--- a/students_submissions/8889436/lab5.ipynb
+++ b/students_submissions/8889436/lab5.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +36,24 @@
     "import pandas as pd\n",
     "\n",
     "# importing the dataset used in lab 4\n",
-    "X, y = datasets.load_diabetes(as_frame=True, scaled=False, return_X_y=True)\n",
-    "    "
+    "X, y = datasets.load_diabetes(as_frame=True, scaled=False, return_X_y=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Construct a table summarizing the cross-validation results. Each model should have a separate row in the table. Include the R-Squared and Mean Absolute Error (MAE) metrics for each model. Calculate the mean value and standard deviation of these metrics from the cross-validation. Include both values. (2 points)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "degrees = np.arange(0, 9)  # creating degree rangin ffrom 0 to 8\n",
+    "degrees = np.arange(0, 9)  # creating degree rangin from 0 to 8\n",
     "\n",
     "cross_val_results = [] # empty list to store all crossvalidation metrics\n",
     "# looping through every degree\n",
@@ -66,16 +73,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2. Construct a table summarizing the cross-validation results. Each model should have a separate row in the table. Include the R-Squared and Mean Absolute Error (MAE) metrics for each model. Calculate the mean value and standard deviation of these metrics from the cross-validation. Include both values. (2 points)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,7 @@
        "8             706.280274  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -251,18 +250,12 @@
     "\n",
     "To find the best model we need to determine the mean value from both the metrics R-Squarred and MAE which are used to find the best fit.\n",
     "\n",
-    "After observing the table above and perofming the `argmax()` function on both the R-Squared and MAE we come to find that the polynomial model with degree 1 has the highest R-squarted mean value amonge all the other values `(0.482316)`, which means that it has a better fit than other values as; A R<sup>2</sup>  of 1 indicates that the regression predictions perfectly fit the data and values of R<sup>2</sup> outside the range of 0 to 1 occurs when the model fit the data worse than the wrost possinle least-square predictor [Source- wiki](https://en.wikipedia.org/wiki/Coefficient_of_determination).\n",
+    "After observing the table above and perofming the `argmax()` function on both the R-Squared and MAE we come to find that the polynomial model with degree 1 has the highest R-squarted mean value among all the other values `(0.482316)`, which means that it has a better fit than other values as; A R<sup>2</sup>  of 1 indicates that the regression predictions perfectly fit the data and values of R<sup>2</sup> outside the range of 0 to 1 occurs when the model fit the data worse than the wrost possinle least-square predictor [Source- wiki](https://en.wikipedia.org/wiki/Coefficient_of_determination).\n",
     "\n",
     "Also the Mean Absolute Error (MAE) for degree 1 is the lowest `(-44.276499)` which means it has better fit as low MAE means better fit as it has less errors on average. \n",
     "\n",
-    "Hence, since degree of 1 has both the highest R-squared mean and the lowest Mean Absoulte Error (MAE) we can say tha the polynomial modal with degree 1 has the best fit among all."
+    "Hence, since `degree of 1` has both the highest R-squared mean and the lowest Mean Absoulte Error (MAE) we can say that the `polynomial model with degree 1` has the best fit among all."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
