--- a/students_submissions/8856840/Practical_Lab-5.ipynb
+++ b/students_submissions/8856840/Practical_Lab-5.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,30 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Splitting the dataset into train and test\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Converting X_train and X_test to dataframes\n",
-    "\n",
-    "X_train = pd.DataFrame(X_train)\n",
-    "X_test = pd.DataFrame(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +116,7 @@
        "                 ('linear', LinearRegression())])}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,14 +126,14 @@
     "\n",
     "degrees = list(range(0, 9))\n",
     "\n",
-    "models = create_polynomial_models(X_train, y_train, degrees)\n",
+    "models = create_polynomial_models(X, y, degrees)\n",
     "\n",
     "models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
