slight correction to conclusion

--- a/students_submissions/8889436/lab5.ipynb
+++ b/students_submissions/8889436/lab5.ipynb
@@ -254,7 +254,7 @@
     "\n",
     "Also the Mean Absolute Error (MAE) for degree 1 is the lowest `(-44.276499)` which means it has better fit as low MAE means better fit as it has less errors on average. \n",
     "\n",
-    "Hence, since `degree of 1` has both the highest R-squared mean and the lowest Mean Absoulte Error (MAE) we can say that the `model with degree 1` has the best fit among all."
+    "Hence, since `degree of 1` has both the highest R-squared and the lowest Mean Absoulte Error (MAE) we can say that the `model with degree 1` has the best fit among all."
    ]
   }
  ],
