--- a/students_submissions/8889436/lab5.ipynb
+++ b/students_submissions/8889436/lab5.ipynb
@@ -252,7 +252,7 @@
     "\n",
     "After observing the table above and perofming the `argmax()` function on both the R-Squared and MAE we come to find that the model with degree 1 has the highest R-squarted mean value among all the other values `(0.482316)`, which means that it has a better fit than other values as; A R<sup>2</sup>  of 1 indicates that the regression predictions perfectly fit the data and values of R<sup>2</sup> outside the range of 0 to 1 occurs when the model fit the data worse than the wrost possinle least-square predictor [Source- wiki](https://en.wikipedia.org/wiki/Coefficient_of_determination).\n",
     "\n",
-    "Also the Mean Absolute Error (MAE) for degree 1 is the lowest `(-44.276499)` which means it has better fit as low MAE means better fit as it has less errors on average. \n",
+    "Also the Mean Absolute Error (MAE) for degree 1 is  `(-44.276499)` which means it has better fit; as MAE is an error metics which means the lower the value the better the fit and since we have negative MAE the opposite is true in our case.\n",
     "\n",
     "Hence, since `degree of 1` has both the highest R-squared and the lowest Mean Absoulte Error (MAE) we can say that the `model with degree 1` has the best fit among all."
    ]
