--- a/students_submissions/8901587/lab5.ipynb
+++ b/students_submissions/8901587/lab5.ipynb
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code will identify the best model based on the highest R-Squared value and the lowest MAE value from the cross-validation results. The 'best_r2_model' and 'best_mae_model' variables will contain the row of the results table corresponding to the best model for each metric.if you  prioritize the higher r squaredthen model with highest r squred will be the best,meanwhile u lookkng for loweest MAE value then the model with highest MAE will be the one that best to you."
+    "This code will identify the best model based on the highest R-Squared value and the lowest MAE value from the cross-validation results. The 'best_r2_model' and 'best_mae_model' variables will contain the row of the results table corresponding to the best model for each metric.if you  prioritize the higher r squared then model with highest r squred will be the best,meanwhile you lookkng for loweest MAE value then the model with highest MAE will be the one that best to you."
    ]
   }
  ],
